Fixed bug with link examiner scrollbar

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -93,6 +93,7 @@ body {
     pointer-events:none;
 }
 .LinkExaminer {
+  pointer-events:initial;
   margin-left: 10px;
   max-height:400px;
 }
